--- a/views/peeps/index.erb
+++ b/views/peeps/index.erb
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<link rel="stylesheet" href="/css/styles.css" />
 <title>Chitter</title>
 </head>
 <body>
 
 <h1>Chitter</h1>
 
-<section>
+<section id="peep-box">
   <form action="/peeps/post" method="post">
     <textarea type="textbox" name="peep" rows="3" cols="50" placeholder="Make a peep..." autofocus></textarea>
     <input type="submit" value="Post">
@@ -19,7 +19,9 @@
 
 <% @peeps.each do |peep| %>
   <article>
-    <p><%= peep.print %></p>
+    <section>
+      <p><%= peep.print %></p>
+    </section>
   <article>
 <% end %>
 
