Add and amend tests and feature to display the time a post was made

--- a/views/peeps/index.erb
+++ b/views/peeps/index.erb
@@ -22,7 +22,12 @@
   <section class="peep-list">
     <% @peeps.each do |peep| %>
       <div class="peep">
-        <%= peep.text %>
+        <div class="peep-body">
+          <%= peep.text %>
+        </div>
+        <div class="peep-footer">
+          <%= peep.created_at %>
+        </div>
       </div>
     <% end %>
   </section>
